# sd-scripts

./: fler_train.md  launch.sh  main.py  pyproject.toml  requirements.txt  train_basic_fler.sh  train_basic_fler_unet_only.sh  train_blended_fler.sh  train_blended_fler_unet_only.sh
datasets/: blended_fler.toml  fler.toml
fler_resources/: prompts.txt  train_cmd.txt
