[project]
name = "sd-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.36.0",
    "torch==2.4.1",
]

[dependency-groups]
dev = [
    "accelerate==0.30.0",
    "altair==4.2.2",
    "bitsandbytes==0.44.0",
    "diffusers[torch]==0.25.0",
    "easygui==0.98.3",
    "einops==0.7.0",
    "ftfy==6.1.1",
    "huggingface-hub==0.24.5",
    "imagesize==1.4.1",
    "lion-pytorch==0.0.6",
    "numpy<2.0.0",
    "opencv-python==4.8.1.78",
    "prodigyopt==1.0",
    "pytorch-lightning==1.9.0",
    "rich==13.7.0",
    "safetensors==0.4.2",
    "sd-scripts",
    "tensorboard>=2.19.0",
    "toml==0.10.2",
    "transformers==4.44.0",
    "voluptuous==0.13.1",
]

[tool.uv.sources]
sd-scripts = { workspace = true }
